...
          ),
        }}
      />
      <Tabs.Screen
        name="log"
        options={{
          title: "Log",
          tabBarIcon: ({ focused }) => (
            <TabBarIcon Icon={IconClipboard} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: "Profile",
          tabBarBadge: undefined,
          tabBarIcon: ({ focused }) => (
            <TabBarIcon Icon={IconUser} focused={focused} />
          ),
        }}
      />
...
